syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.prism.protos";

package io.iohk.atala.prism.protos;

import "cstore_models.proto";

service CredentialsStoreService {
  rpc StoreCredential (StoreCredentialRequest) returns (StoreCredentialResponse) {}
  rpc GetStoredCredentialsFor (GetStoredCredentialsForRequest) returns (GetStoredCredentialsForResponse) {}
}

message StoreCredentialRequest {
  string connectionId = 1; // connection id retrieved from the connector message that carried the credential
  string encodedSignedCredential = 2; // the encoded signed data
}

message StoreCredentialResponse {
}

message GetStoredCredentialsForRequest {
  // TODO: Rename to `holderId` after removing legacy methods
  string individualId = 1;
}

message GetStoredCredentialsForResponse {
  repeated StoredSignedCredential credentials = 1;
}
